@@ -1,3 +1,7 @@
+2004-10-26  Bruno Haible  <bruno@clisp.org>
+
+	* clos.tst: Add test against multiple execution of initialize-instance.
+
 2004-10-22  Bruno Haible  <bruno@clisp.org>
 
 	* mop.tst: Make the auto-accessors test portable.
